Aggressive Enemy Type
Create the functionality to support enemy aggression If an enemy is close to a player, the enemy will try and “ram” it

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -66,6 +66,7 @@
      <Compile Include="Assets\Script\Player.cs" />
      <Compile Include="Assets\Script\Enemy.cs" />
      <Compile Include="Assets\Script\SpawnManager.cs" />
+     <Compile Include="Assets\Script\PlayerCircleCollider.cs" />
      <None Include="Assets\GameDevHQ\FileBase\Projects\Tutorials\Starter_Files\2D_Galaxy_Assets\Materials\Shaders\Galaxy.shader" />
      <None Include="Assets\GameDevHQ\FileBase\Plugin\README.txt" />
  <Reference Include="Unity.Timeline.Editor">
